# CloudPool

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TROUBLESHOOTING.md  idea.md
.github/workflows/: build.yml  deploy.yml
backend/rust/: Cargo.toml  Dockerfile
backend/rust/src/: cache.rs  data_service.rs  error.rs  file_service.rs  lib.rs  models.rs  vector_service.rs
backend/spring-boot/: Dockerfile  pom.xml
backend/spring-boot/src/main/java/com/cloudpool/: CloudpoolApplication.java
backend/spring-boot/src/main/java/com/cloudpool/config/: CacheConfig.java  (+5 more)
backend/spring-boot/src/main/resources/: application-ci.yml  application-dev.yml  application.yml  logback-spring.xml  schema.graphql
backend/spring-boot/src/main/resources/db/migration/: V1__initial_schema.sql  V2__add_background_jobs.sql  V3__add_api_key_usage.sql  V4__architectural_optimizations.sql
backend/spring-boot/src/main/resources/graphql/: schema.graphqls
backend/spring-boot/src/main/resources/static/: index.html
backend/spring-boot/storage/: 6ab264e9-95a0-4ed3-b60f-3a212166f01f_testfile.txt
docker/: docker-compose.prod.yml  docker-compose.yml
docker/nginx/: nginx.conf
docker/prometheus/: alerts.yml  prometheus.yml
docs/: API.md  ARCHITECTURE.md  CachingStrategy.md  DEPLOYMENT.md  DEVELOPMENT.md  QueryOptimization.md  RELEASE_PROCESS.md
frontend/dashboard/: index.html
kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  secret.yaml  service.yaml
scripts/: deploy.bat  deploy.sh  migrate.bat  migrate.sh  setup.bat  setup.sh  test.bat  test.sh
(+83 files in other folders)
