[package]
name = "cloudpool-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
flate2 = "1.0"

# FFI
libloading = "0.8"
jni = "0.21"

# Performance
rayon = "1.7"
parking_lot = "0.12"

[lib]
name = "cloudpool_rust"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "cloudpool"
path = "src/bin/main.rs"
